add caf route to get the family composition
