# swagger/api-particulier.yaml
@@ -315,6 +315,55 @@ paths:
           schema:
             $ref: '#/definitions/Error'
 
+  /caf/famille:
+    get:
+      summary: Composition d'un foyer CAF
+      description: |
+        Le service récupérer les parents et les enfants du foyer déclaré à la CAF
+        Il récupère, leur nom et prénom, leur date de naissance et leur sexe
+      parameters:
+          - name: numeroAllocataire
+            in: query
+            description: Numéro d'allocataire
+            required: true
+            type: number
+            format: integer
+          - name: codeOrganisme
+            in: query
+            description: Code organisme de la CAF (un par code postal)
+            required: true
+            type: number
+            format: integer
+          - name: X-API-Key
+            in: header
+            description: Token d'identification de l'API
+            required: true
+            type: string
+          - name: X-User
+            in: header
+            description: Utilisateur final de l'API
+            required: false
+            type: string
+      tags:
+        - CAF
+      responses:
+        '200':
+          description: Le quotient familial
+          schema:
+            $ref: '#/definitions/Famille'
+        '401':
+          description: Le token ne vous permet d'accèder à l'API
+          schema:
+            $ref: '#/definitions/Error'
+        '404':
+          description: 'Les paramètres fournis sont incorrects ou ne correspondent pas à un allocataire CAF'
+          schema:
+            $ref: '#/definitions/Error'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+
   /ping:
     get:
       summary: Service pour connaitre si l'application fonctionne correctement
@@ -493,8 +542,34 @@ definitions:
         type: integer
         description: Mois du quotient familial
 
+  Person:
+    type: object
+    description: Personne référencée à la CAF
+    properties:
+      nomPrenon:
+        type: array
+        description: Noms et prénom des personnes allocataire de la CAF
+        items:
+          type: string
+      dateDeNaissance:
+        type: string
+        description: "Date de naissance au format: JJMMAAAA"
+      sexe:
+        type: string
+        description: "'M' : masculin ou 'F' : féminin"
 
-
+  Famille:
+    description: Foyer tel qu'il est déclaré à la CAF
+    type: object
+    properties:
+      allocataires:
+        type: array
+        items:
+          $ref: '#/definitions/Person'
+      enfants:
+        type: array
+        items:
+          $ref: '#/definitions/Person'
 
   Error:
     type: object
